--- a/app.json
+++ b/app.json
@@ -1,29 +1,33 @@
 {
   "expo": {
-    "name": "HikeSafeChat",
-    "slug": "HikeSafeChat",
+    "name": "HikeSafe Mesh Chat",
+    "slug": "hikesafe-mesh-chat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2c3e50"
+    },
+    "platforms": ["ios", "android"],
+    "android": {
+      "permissions": [
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.yourcompany.hikesafe"
     },
     "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSBluetoothAlwaysUsageDescription": "This app uses Bluetooth to connect to HikeSafe mesh devices for emergency communication.",
+        "NSBluetoothPeripheralUsageDescription": "This app uses Bluetooth to connect to HikeSafe mesh devices for emergency communication.",
+        "NSLocationWhenInUseUsageDescription": "Location access is required for Bluetooth scanning on iOS."
+      }
     }
   }
 }
