--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.0",
-    "react-native-ble-plx": "^3.1.2",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/cli": "latest",
+    "expo": "53.0.22",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-ble-plx": "^3.5.0",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
