--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "latest",
     "expo": "53.0.22",
+    "expo-dev-client": "~5.2.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-ble-plx": "^3.5.0",
-    "expo-dev-client": "~5.2.4"
+    "react-native-bootsplash": "^6.3.10",
+    "react-native-make": "^1.0.1",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
