Revert "changes in dependencies"
This reverts commit 74174d9cee9d4c1a61c629eb2d9538ebac1d16b0.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo-dev-client": "~5.2.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-ble-plx": "^3.5.0"
+    "react-native-ble-plx": "^3.5.0",
+    "react-native-bootsplash": "^6.3.10",
+    "react-native-make": "^1.0.1",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
