--- a/app.json
+++ b/app.json
@@ -7,13 +7,11 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
+      
       "resizeMode": "contain",
       "backgroundColor": "#2c3e50"
     },
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "android": {
       "permissions": [
         "android.permission.BLUETOOTH",
@@ -30,9 +28,6 @@
         "NSBluetoothPeripheralUsageDescription": "This app uses Bluetooth to connect to HikeSafe mesh devices for emergency communication.",
         "NSLocationWhenInUseUsageDescription": "Location access is required for Bluetooth scanning on iOS."
       }
-    },
-    "plugins": [
-      "expo-sqlite"
-    ]
+    }
   }
 }
