--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "latest",
     "@react-native-picker/picker": "^2.11.1",
-    "expo": "53.0.22",
+    "expo": "^53.0.22",
     "expo-dev-client": "~5.2.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
