--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "latest",
     "@react-native-picker/picker": "^2.11.1",
+    "date-fns": "^4.1.0",
     "expo": "53.0.22",
     "expo-dev-client": "~5.2.4",
     "expo-image": "^2.4.0",
+    "expo-sqlite": "~15.2.14",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-ble-plx": "^3.5.0",
@@ -22,8 +24,7 @@
     "react-native-image": "^0.1.1",
     "react-native-make": "^1.0.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-webview": "^13.16.0",
-    "expo-sqlite": "~15.2.14"
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
